fixed errors, changed source to https, disabled tracking for Gemfile.lock

--- a/senthil/sinatra/Gemfile
+++ b/senthil/sinatra/Gemfile
@@ -1,6 +1,3 @@
-require 'rubygems'
-
-# and now load bundler with your dependencies load paths
-require 'bundler/setup'
+source 'https://rubygems.org'
 
 gem "sinatra" 
